fix align

--- a/Marcinis/wwwroot/css/login.css
+++ b/Marcinis/wwwroot/css/login.css
@@ -26,7 +26,7 @@ input, button {
     overflow: hidden;
     position: relative;
     width: 1000px;
-    height: 70vh;
+    height: 80vh;
     margin: 0 auto 100px;
 }
 
